--- a/css/style.css
+++ b/css/style.css
@@ -10587,7 +10587,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 
 @media (max-width: 991.98px) {
     .ftco-navbar-light {
-        background: #000 !important;
+        background: #f5f3f3 !important;
         position: relative;
         top: 0;
         padding: 10px 15px
@@ -10719,7 +10719,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 
 .ftco-navbar-light .navbar-toggler {
     border: none;
-    color: rgba(255, 255, 255, .5) !important;
+    color: rgba(56, 55, 55, 0.5) !important;
     cursor: pointer;
     padding-right: 0;
     text-transform: uppercase;
