--- a/css/style.css
+++ b/css/style.css
@@ -10635,7 +10635,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
         padding-right: 0;
         padding-top: .9rem;
         padding-bottom: .9rem;
-        color: rgba(255, 255, 255, .7)
+        color: rgba(0, 0, 0, 0.88)
     }
 
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
@@ -10713,7 +10713,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 
 @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-        color: #fff
+        color: #1eaaf1
     }
 }
 
@@ -11830,7 +11830,7 @@ textarea.form-control {
 }
 
 .ftco-section {
-    padding: 7em 0;
+    padding: 3em 0;
     position: relative
 }
 
