--- a/css/style.css
+++ b/css/style.css
@@ -11685,6 +11685,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
     background-repeat: no-repeat;
     background-position: center center;
     height: 1000px;
+    width: 100%;
     position: relative;
     display: block
 }
